# NaviGator

./: .gitignore  README.md  my_map_save.pgm  my_map_save.yaml  my_map_serial.data
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/navibot/share/ament_index/resource_index/package_run_dependencies/: navibot
install/navibot/share/ament_index/resource_index/parent_prefix_path/: navibot
install/navibot/share/navibot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/navibot/share/navibot/cmake/: navibotConfig-version.cmake  navibotConfig.cmake
install/navibot/share/navibot/config/: drive_bot.rviz  empty.yaml  gazebo_params.yaml  main.rviz  my_controllers.yaml  view_bot.rviz
install/navibot/share/navibot/description/: camera.xacro  depth_camera.xacro  face.xacro  gazebo_control copy.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
install/navibot/share/navibot/environment/: ament_prefix_path.dsv  path.dsv
install/navibot/share/navibot/launch/: launch_sim.launch.py  rsp.launch.py
install/navibot/share/navibot/worlds/: empty.world  obstacles.world
log/: latest_build
src/ball_tracking/: CMakeLists.txt  package.xml
src/ball_tracking/src/: detect_ball_2D.cpp  detect_ball_3D.cpp  follow_ball.cpp  plan_path.cpp  process_image.hpp
src/navibot/: package.xml
src/navibot/config/: costmap.rviz  drive_bot.rviz  main.rviz  map.rviz  mapper_params_online_async.yaml  view_bot.rviz
src/navibot/description/: robot.urdf.xacro  ros2_control.xacro
src/navibot/launch/: launch_sim.launch.py  rsp.launch.py
